@@ -8,9 +8,9 @@ if(NOT CMAKE_BUILD_TYPE)
 endif(NOT CMAKE_BUILD_TYPE)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
-set(MathGL_VERSION_MAJOR 2)
-set(MathGL_VERSION_MINOR 2.2)
-set(MathGL_SOVERSION 7.2.0)
+#set(MathGL_VERSION_MAJOR 2)
+#set(MathGL_VERSION_MINOR 2.2)
+set(MathGL_SOVERSION 7.3.0)
 
 
 MACRO(MGL_DEPENDENT_OPTION option doc default depends1 force1 depends2 force2)
